--- a/AppArch/frontend/BMFT/src/components/styles/wwdpanels3.module.css
+++ b/AppArch/frontend/BMFT/src/components/styles/wwdpanels3.module.css
@@ -1,15 +1,15 @@
 .panelcontainer {
   display: flex;
-  flex-wrap: wrap; 
-  justify-content: center; 
-  gap: 60px; 
-  margin: 40px auto; 
-  max-width: 2000px; 
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 60px;
+  margin: 40px auto;
+  max-width: 1550px;
 }
 .panel {
-  width: 100%; 
-  max-width: 300px; 
-  height: 330px;
+  width: 100%;
+  max-width: 440px;
+  height: 360px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -30,7 +30,7 @@
 
 .panelimg {
   width: 100%;
-  height: 200px;
+  height: 250px;
   object-fit: cover;
   border-radius: 4px;
   margin-bottom: 10px;
